[gd_scene load_steps=11 format=3 uid="uid://b6c8fwsvm7b8k"]

[ext_resource type="Texture2D" uid="uid://dne3vti22ebde" path="res://assets/player/player.png" id="1_842iu"]
[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_vw300"]
[ext_resource type="PackedScene" uid="uid://xnje4uggyijj" path="res://scenes/ui.tscn" id="2_130pe"]
[ext_resource type="Texture2D" uid="uid://cgbk02q34tlg" path="res://assets/player/pointer.png" id="2_wl0il"]
[ext_resource type="Texture2D" uid="uid://bb6yq41h7plnu" path="res://assets/weapons/sword.png" id="4_hjkq0"]
[ext_resource type="Texture2D" uid="uid://dhaytpklv7tjl" path="res://assets/weapons/bow.png" id="4_o0v6d"]
[ext_resource type="AnimationLibrary" uid="uid://81c0pbcls2m0" path="res://animations/player_animations.res" id="5_fvxux"]
[ext_resource type="Texture2D" uid="uid://gocm6goif27y" path="res://assets/player/attack.png" id="6_uhjr1"]
[ext_resource type="Texture2D" uid="uid://nuos6san62fu" path="res://assets/player/ranged_attack.png" id="7_qu3kr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o3gem"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_vw300")

[node name="Ui" parent="." instance=ExtResource("2_130pe")]
position = Vector2(0, 41)

[node name="Body" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
texture = ExtResource("1_842iu")
hframes = 8
vframes = 3
frame = 3

[node name="Melee" type="Sprite2D" parent="."]
visible = false
z_index = -1
texture_filter = 1
position = Vector2(-6, -2)
rotation = 0.507229
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_hjkq0")
flip_v = true

[node name="Aim" type="Marker2D" parent="."]

[node name="Ranged" type="Sprite2D" parent="Aim"]
texture_filter = 1
position = Vector2(5, -1)
texture = ExtResource("4_o0v6d")

[node name="RangedMark" type="Sprite2D" parent="Aim/Ranged"]
texture_filter = 1
position = Vector2(2, 0)
texture = ExtResource("7_qu3kr")
hframes = 3

[node name="Pointer" type="Sprite2D" parent="Aim"]
texture_filter = 1
position = Vector2(18, 2)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wl0il")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1, 2)

[node name="MeleeMark" type="Sprite2D" parent="Marker2D"]
texture_filter = 1
position = Vector2(5, -3)
texture = ExtResource("6_uhjr1")
flip_v = true
hframes = 9
vframes = 3

[node name="Aim-helper" type="Marker2D" parent="Marker2D"]
position = Vector2(55, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_o3gem")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("5_fvxux")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="DodgeCooldown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="DodgeCooldown" to="." method="_on_dodge_cooldown_timeout"]
